--- a/user/templates/pages/new_user.html
+++ b/user/templates/pages/new_user.html
@@ -38,11 +38,19 @@
               {% csrf_token %}
               <div class="card-body">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
+                  <label for="exampleInputFirstName">First Name</label>
+                  <input type="text" class="form-control" name="first_name" placeholder="Enter your first name">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputLastName">Last Name</label>
+                  <input type="text" class="form-control" name="last_name" placeholder="Enter your last name">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputEmail">Email address</label>
                   <input type="email" class="form-control" name="email" placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
+                  <label for="exampleInputPassword">Password</label>
                   <input type="password" class="form-control" name="password" placeholder="Password">
                 </div>
                 <!-- <div class="form-group">
