--- a/user/templates/layout/sidebar.html
+++ b/user/templates/layout/sidebar.html
@@ -37,7 +37,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
+                <a href="{% url 'view_user' %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>User List</p>
                 </a>
