--- a/user/templates/layout/app.html
+++ b/user/templates/layout/app.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.css' %}">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  {% block style %}
+  {% endblock %}
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -93,5 +95,7 @@
   <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="{% static 'dist/js/demo.js' %}"></script>
+  {% block js %}
+  {% endblock %}
 </body>
 </html>
