--- a/user/templates/pages/user_list.html
+++ b/user/templates/pages/user_list.html
@@ -25,7 +25,7 @@
   <section class="content">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">{{ page_title | capfirst }} List</h3>
@@ -36,22 +36,27 @@
                 <thead>                  
                   <tr>
                     <th style="width: 10px">#</th>
-                    <th>Task</th>
-                    <th>Progress</th>
-                    <th style="width: 40px">Label</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>1.</td>
-                    <td>Update software</td>
-                    <td>
-                      <div class="progress progress-xs">
-                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                      </div>
-                    </td>
-                    <td><span class="badge bg-danger">55%</span></td>
-                  </tr>
+                  {% for user in users %}
+                    <tr>
+                      <td>1.</td>
+                      <td>{{ user.first_name }}</td>
+                      <td>{{ user.last_name }}</td>
+                      <td>{{ user.email }}</td>
+                      <td>
+                        <a href="{% url 'edit_user' user.id %}" class="btn btn-sm btn-success">
+                          <i class="fa fa-edit"></i>
+                        </a>
+                        <button data-id="{{ user.id }}" onclick="deleteUser($(this))" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+                      </td>
+                    </tr>
+                  {% endfor %}
                 </tbody>
               </table>
             </div>
@@ -74,3 +79,21 @@
 </div>
 
 {% endblock content %}
+
+{% block js %}
+
+  <script type="text/javascript">
+
+    function deleteUser(item) 
+    {
+      var user_id = item.data('id');
+      var url = `delete/${user_id}`;
+
+      $.get(url, function(response) {
+        item.closest('.tr').remove();
+      });
+    }
+
+  </script>
+
+{% endblock %}
