--- a/user/templates/pages/new_user.html
+++ b/user/templates/pages/new_user.html
@@ -34,7 +34,7 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form action="{% url 'create_user' %}" method="post">
+            <form action="{% url 'create_user' %}" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="card-body">
                 <div class="form-group">
@@ -53,18 +53,18 @@
                   <label for="exampleInputPassword">Password</label>
                   <input type="password" class="form-control" name="password" placeholder="Password">
                 </div>
-                <!-- <div class="form-group">
-                  <label for="exampleInputFile">File input</label>
+                <div class="form-group">
+                  <label for="inputFile">File input</label>
                   <div class="input-group">
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input">
-                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                      <input type="file" class="custom-file-input" name="profile_img">
+                      <label class="custom-file-label" for="inputFile">Choose file</label>
                     </div>
                     <div class="input-group-append">
                       <span class="input-group-text">Upload</span>
                     </div>
                   </div>
-                </div> -->
+                </div>
               </div>
               <!-- /.card-body -->
 
