--- a/user/templates/pages/edit_user.html
+++ b/user/templates/pages/edit_user.html
@@ -34,7 +34,7 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form action="{% url 'update_user' user.id %}" method="post">
+            <form action="{% url 'update_user' user.id %}" method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="card-body">
                 <div class="form-group">
