Add wifi qr code scanner

--- a/user/templates/pages/user_list.html
+++ b/user/templates/pages/user_list.html
@@ -81,7 +81,10 @@
           <!-- /.card -->
 
           <div>
-            {% qr_from_text qr_code_message options=qr_code_options %}
+
+            <h3>Configure Wi-Fi connexion to '{{ wifi_config.ssid }}'</h3>
+            {% qr_for_wifi wifi_config options=qr_code_options %}
+
           </div>
 
         </div>
