--- a/user/templates/pages/user_list.html
+++ b/user/templates/pages/user_list.html
@@ -83,7 +83,7 @@
           <!-- /.card -->
 
           <div>
-            <h3>Configure Wi-Fi connexion to '{{ wifi_config.ssid }}'</h3>
+            <h3>Configure Wi-Fi connection to '{{ wifi_config.ssid }}'</h3>
             {% qr_for_wifi wifi_config options=qr_code_options %}
           </div>
 
