--- a/user/templates/layout/sidebar.html
+++ b/user/templates/layout/sidebar.html
@@ -9,21 +9,26 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
+      {% if user.is_authenticated %}
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
+          {% if user.document.document %}
+          <img src="{{ user.document.document }}" class="img-circle elevation-2" alt="User Image">
+          {% else %}
           <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+          {% endif %}
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">{{ user.first_name }}</a>
         </div>
       </div>
+      {% endif %}
 
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
+          <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
           <li class="nav-item has-treeview menu-open">
             <a href="#" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
