--- a/user/templates/layout/sidebar.html
+++ b/user/templates/layout/sidebar.html
@@ -1,9 +1,8 @@
 {% load static %}
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-      <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-           style="opacity: .8">
+    <a href="{% url 'dashboard' %}" class="brand-link">
+      <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
 
@@ -20,7 +19,7 @@
           {% endif %}
         </div>
         <div class="info">
-          <a href="#" class="d-block">{{ user.first_name }}</a>
+          <a href="{% url 'dashboard' %}" class="d-block">{{ user.first_name }}</a>
         </div>
       </div>
       {% endif %}
